--- a/media.css
+++ b/media.css
@@ -1,4 +1,8 @@
 @media (max-width: 992px) {
+  :root {
+    --space: 30px;
+  }
+  
   span.navbar-toggler-icon {
     color: #000;
   }
@@ -9,6 +13,11 @@
   }
   .navbar-collapse {
     padding-left: 20px;
+  }
+  .hero-section h1 {
+    font-size: 70px;
+    padding-bottom: 14px;
+    text-align: center;
   }
   .parent-service-box {
     flex-direction: column;
@@ -28,7 +37,7 @@
   }
   .about-content {
     flex-direction: column;
-    padding: 100px 10px;
+    padding: 100px var(--space);
   }
   .about-content h4 {
     text-align: center;
@@ -45,12 +54,12 @@
     margin: 0 auto;
   }
   .about-img {
-    padding: 50px 10px 0px;
+    padding: 50px 0px 0px;
   }
   .client-section {
     height: fit-content;
     margin-top: 0px;
-    padding: 50px 10px;
+    padding: 50px var(--space);
   }
 
   .client-content {
@@ -62,93 +71,192 @@
   }
   .news-content {
     margin-top: 60px;
-    padding: 0px 10px;
+    padding: 0px var(--space);
     flex-direction: column;
     text-align: center;
   }
-  .content-box-1{
-      margin: auto
+  .content-box-1 {
+    margin: auto;
+    width: 100%;
   }
-  .portfolio-box{
-   flex-direction: column
+  .portfolio-box {
+    flex-direction: column;
   }
   .pricing-all-boxes {
-      flex-direction: column
+    flex-direction: column;
   }
-  .pricing-box-1{
-      width: 340px
+  .pricing-box-1 {
+    width: 340px;
   }
-  .team-box-1{
-      flex-direction: column;padding: 0px 10px
+  .team-box-1 {
+    flex-direction: column;
+    padding: 0px var(--space);
   }
-  .team-box-2{
-      left: 0
+  .team-box-2 {
+    left: 0;
   }
   .items-img {
-    width: 100%
+    width: 100%;
+  }
+  .team-section {
+    padding-bottom: 100px;
+  }
+  .team-box-1 {
+    margin-top: 80px;
+  }
+  .about-team {
+    padding: 65px 50px;
+    left: 0px;
+    width: 100%;
+  }
+  .social-logos {
+    padding: 0 var(--space);
+  }
+  .social-media {
+    top: 0;
+    width: 100%;
+    text-align: center;
+  }
+  .section-skills {
+    flex-direction: column;
+    padding: 100px 20px;
+  }
+  .skill-box-2-child {
+    flex-direction: column;
+    gap: 0px;
+    text-align: center;
+  }
+  .skill-box-first > h5 {
+    text-align: center;
+  }
+  .section-skill-box-1 :nth-of-type(2) h2 {
+    text-align: center;
+  }
+  .section-skill-box-1 :nth-of-type(3) p {
+    text-align: center;
+  }
+  .section-skill-box-2 {
+    width: 100%;
+  }
+  .skill-box-2-child h6 {
+    font-size: 34px;
+  }
+  .milestones-boxes {
+    flex-direction: column;
+    padding: 0px 15px 0px 15px;
+  }
+  .box-1 {
+    flex-direction: column;
+    text-align: center;
+    gap: 15px;
+  }
+  .box-1 div p {
+    padding-top: 15px;
+  }
+  .container {
+    padding: 70px 0px !important;
+  }
+  .box-2 {
+    padding-bottom: 30px;
+  }
+  .contact-info {
+    padding: 80px var(--space);
+    flex-direction: column;
+  }
+  .contact-info h4 {
+    text-align: center;
+  }
+  .contact-info h2 {
+    text-align: center;
+  }
+  .icons {
+    justify-content: center;
+  }
+  .contact-info p {
+    text-align: center;
+  }
 }
-.team-section{
-    padding-bottom: 100px
+@media (max-width: 784px) {
+  :root {
+    --space: 25px;
+  }
 }
-.team-box-1 {
-    margin-top: 80px
+@media (max-width: 475px) {
+  :root {
+    --space: 10px;
+  }
+  .hero-section h1 {
+    font-size: 44px;
+    text-align: center;
+    padding-bottom: 25px;
+  }
+  .hero-section > div {
+    width: 100%;
+  }
+  .service-heading {
+    width: 250px;
+  }
+  .Portfolio {
+    width: 234px;
+  }
+  .about-team h2 {
+    font-size: 35px;
+  }
+  .about-team {
+    padding: 20px var(--space);
+    font-size: 70px;
+    color: #fff;
+    font-weight: 600;
+    padding-bottom: 14px;
+  }
+  .about-team p {
+    padding-top: 10px;
+  }
+  .section-skill-box-1 :nth-of-type(2) h2 {
+    font-size: 40px;
+  }
+  .section-skill-box-2 {
+    padding-top: 15px;
+  }
+  .section-skills {
+    padding: 100px var(--space);
+  }
+
+  .contact-info h2 {
+    font-size: 40px;
+  }
+  footer h3 {
+    font-size: 24px;
+  }
+  
 }
-.about-team{
-    padding: 65px 50px ;left:0px;width: 100%
+
+@media (max-width: 350px) {
+  .pricing-box-1 {
+    width: 100%;
+  }
+  .price-num {
+    right: -2px;
+  }
 }
-.social-media{
-    top: 0;width: 96%;text-align: center
-}
-.section-skills{
-    flex-direction: column;padding: 100px 20px
-}
-.skill-box-2-child{
-    flex-direction: column;gap: 0px;text-align: center
-}
-.skill-box-first > h5{
-  text-align: center
-}
-.section-skill-box-1 :nth-of-type(2) h2{
-  text-align: center
-}
-.section-skill-box-1 :nth-of-type(3) p{
-  text-align: center
-}
-.section-skill-box-2 {
-width: 100%
-}
-.skill-box-2-child h6 {
-  font-size: 34px
-}
-.milestones-boxes {
-  flex-direction: column;padding: 0px 15px 0px 15px;
-}
-.box-1{
-  flex-direction: column;text-align: center;gap: 15px
-}
-.box-1 div p {
-  padding-top: 15px;
-}
-.container{
-padding:70px 0px!important
-}
-.box-2{
-  padding-bottom: 30px
-}
-.contact-info {
-  padding: 80px 10px;
-  flex-direction: column;
-}
-.contact-info h4 {
-  text-align: center
-}
-.contact-info h2 {
-  text-align: center
-}
-.icons {
-  justify-content: center
-}
-.contact-info p{
-  text-align: center
-}
+@media (min-width: 992px) and (max-width: 1140px) {
+  :root {
+    --space: 40px;
+  }
+  .news-content {
+    gap: 20px;
+  }
+  .pricing-box-1 {
+    width: 300px;
+  }
+
+  .pricing-plan h5 {
+    font-size: 15px;
+  }
+  .navbar-nav{
+    gap: 12px
+  }
+  .nav-link {
+    font-size: 13px;
+  }
 }
