--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@
   padding: 0;
   margin: 0;
 }
-html body {
+html,body {
   max-width: 100%;
   overflow-x: hidden;
+}
+
+:root{
+  --space : 50px
+}
+.fa-solid, .fas {
+  font-weight: 900;
+  font-size: 80px;
+  padding: 0px 0px 100px 20px
 }
 
 .rubik-font {
@@ -14,6 +23,12 @@ html body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+.fa-check{
+  font-size: 22px;color: #47ea4e;padding: 0px 10px 0px 0px;
+}
+.fa-xmark{
+  font-size: 22px;color: rgb(255, 21, 21);padding: 0px 10px 0px 0px;
 }
 .container {
   padding: 0px !important;
@@ -121,7 +136,7 @@ html body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 100px 50px;
+  padding: 100px var(--space);
 }
 
 .services-box h2 {
@@ -198,7 +213,7 @@ a.button-dot:hover:before,
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 100px 50px;
+  padding: 100px var(--space);
 }
 .about-content h4 {
   font-size: 16px;
@@ -224,7 +239,7 @@ a.button-dot:hover:before,
   width: 100%;
   height: 800px;
   margin-top: 150px;
-  padding: 100px 50px;
+  padding: 100px var(--space);
 }
 .client-content {
   width: 100%;
@@ -260,9 +275,9 @@ a.button-dot:hover:before,
 }
 .news-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 60px;
-  padding: 0px 30px;
+  padding: 0px var(--space);
 }
 .content-box-1 {
   width: 350px;
@@ -324,6 +339,26 @@ a.button-dot:hover:before,
 }
 .portfolio-box{
   display: flex
+}
+.boxes-portfolio-2{
+  position: relative;top: 0px
+  /* ;height: 50% */
+}
+
+.boxes-portfolio{
+  position: relative;top: 0px
+}
+.wrap{
+  position: absolute;top: 0px ;left: 0px;width: 100%;height: 100%;z-index: 3;color:#fff;display: flex;align-items: flex-end;padding: 30px 50px;opacity: 0;background: #000;transition: all .3s ease;
+}
+.wrap span{
+  font-size: 18px;font-weight: 400;line-height: 35px
+}
+.wrap b{
+  font-size: 30px;font-size: 600;
+}
+.wrap:hover{
+  opacity: 1;
 }
 
 .boxes-portfolio img {
@@ -438,14 +473,19 @@ a.button-dot:hover:before,
   height: 700px;
   background-image: url(./about_item_01.jpg);
   background-position: center;
+  background-size: cover
 }
 .items-img-1 {
   background-image: url(./about_item_02.jpg);
   background-position: center;
+  background-size: cover
+
 }
 .items-img-2 {
   background-image: url(./about_item_03.jpg);
   background-position: center;
+  background-size: cover
+
 }
 
 .about-team {
@@ -475,6 +515,8 @@ a.button-dot:hover:before,
   padding-top: 25px;
   font-size: 18px;
   opacity: 0.7;
+  color: darkgray;
+  font-weight: 400;
 }
 
 .social-media {
@@ -496,7 +538,7 @@ a.button-dot:hover:before,
 .section-skills {
   display: flex;
   gap: 20px;
-  padding: 100px 50px;
+  padding: 100px var(--space);
   align-items: center;
 }
 .section-skill-box-1 {
@@ -602,7 +644,7 @@ progress::-webkit-progress-value {
   line-height: 33px;
 }
 .contact-info {
-  padding: 80px 50px;
+  padding: 80px var(--space);
   display: flex;
   gap: 100px;
 }
