--- a/media.css
+++ b/media.css
@@ -6,8 +6,9 @@
   span.navbar-toggler-icon {
     color: #000;
   }
+ 
   button.navbar-toggler {
-    background: #fff;
+    background: #f3f3f3;
     position: relative;
     left: -10px;
   }
@@ -30,7 +31,7 @@
     text-align: center;
   }
   .button-2 {
-    margin-left: 55px;
+    margin-left: 80px;
   }
   .services-box h2 {
     text-align: center;
@@ -181,6 +182,8 @@
     --space: 25px;
   }
 }
+
+
 @media (max-width: 475px) {
   :root {
     --space: 10px;
